--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,22 @@ server.port= 8080
 server.compression.enabled=true
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username= bhl12345
-spring.datasource.password= Bhl13579
+##spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+##spring.datasource.username= bhl12345
+##spring.datasource.password= Bhl13579
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/bradluken
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
