--- a/polling-app-client/package.json
+++ b/polling-app-client/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "react-app-rewire-less": "^2.1.0",
+    "react-app-rewired": "^1.6.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
