--- a/polling-app-client/nginx.conf
+++ b/polling-app-client/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 
 
-http {
+https {
     # what times to include
     include       /etc/nginx/mime.types;
     # what is the default one
