--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,11 @@
 server.port= 8080
 server.compression.enabled=true
 
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-##spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-##spring.datasource.username= bhl12345
-##spring.datasource.password= Bhl13579
-
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/bradluken
+spring.datasource.url=jdbc:postgresql://localhost:5432/polling-db
 spring.datasource.username=postgres
 spring.datasource.password=password
  
@@ -19,10 +14,11 @@ spring.datasource.password=password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
 
 ## Hibernate Logging
-logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.SQL= INFO
 
 # Initialize the datasource with available DDL and DML scripts
 #spring.datasource.initialization-mode=always
