added user_role insert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.datasource.password=password
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Logging
-logging.level.org.hibernate.SQL= INFO
+logging.level.org.hibernate.SQL= DEBUG
 
 # Initialize the datasource with available DDL and DML scripts
 #spring.datasource.initialization-mode=always
